[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]
rargc = { path = "./crates/rargc", version = "0.0.0" }


