[package]
name = "parser"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/rargs"
description = "Parser library for rargs"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "parser"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.2"
log = "0.4.19"
nom = "7.1.3"
once_cell = "1.18.0"
regex = "1.9.4"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.48"
