[package]
name = "rargc"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/rargc"
description = "A bash framework based on argc and bashly"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rargc"
path = "src/main.rs"

[lib]
name = "rargc"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.3.10", features = ["derive", "string"] }
color-eyre = "0.6.2"
convert_case = "0.6.0"
env_logger = "0.10.0"
log = "0.4.19"
nom = "7.1.3"
tera = "1"
lazy_static = "1.4.0"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
include_dir = "0.7.3"
