[package]
name = "rargs"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/rargs"
description = "A bash framework based on argc and bashly"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rargs"
path = "src/main.rs"

[lib]
name = "rargs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
clap = { version = "4.5.13", features = ["derive", "string"] }
color-eyre = "0.6.3"
env_logger = "0.11.5"
log = "0.4.22"
parser = { path = "../parser", version = "0.0.0" }
tempfile = "3.10.1"
templates = { path = "../templates", version = "0.0.0" }
clap-stdin = { version = "0.5.1", features = ["clap"] }

[dev-dependencies]
utils = { path = "../utils", version = "0.0.0" }
insta = { version = "1.39.0", features = ["yaml"] }
test-log = "0.2.16"
tera = "1.20.0"
